# emo_dev_mode_example

./: pyproject.toml  strings.yaml
emo_dev_mode_example/: configs.py  emo_client.py  emonator.py  enums.py  main.py  mge.py  rps.py
